css flecha imagen

--- a/css/styles.css
+++ b/css/styles.css
@@ -463,6 +463,14 @@ border-radius: 30px;
     max-width: 300px;
     margin-left: 300px;
     
+  } .carousel-control-next-icon, .carousel-control-prev-icon {
+    display: inline-block;
+    width: 2rem;
+    height: 2rem;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: 100% 100%;
+    background-color:bisque;
   }
 /*comentarios*/
 
