--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ nav a {
 
 
 .jumbotron {
-  height: 50vh;
+  height: 20vh;/*cambio para pag principal*/
   padding: 5em inherit;
   margin-bottom: 0;
   background-color: #53C0FB;
@@ -217,53 +217,57 @@ a.custom-card:hover {
   justify-content: flex-end;
 }
 
-.div-cards:hover{
-  background-color:#e7e5e5 ;
+.div-cards:hover {
+  background-color: #e7e5e5;
   cursor: pointer;
 }
 
-.title-products{
-text-align: center;
-margin: 20px 0 20px 0;
+.title-products {
+  text-align: center;
+  margin: 20px 0 20px 0;
 }
 
 
-#email{
+#email {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
   margin: auto;
 }
-#password1{ 
+
+#password1 {
   margin-bottom: 30px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
-.form-control{
-    width:300px; 
-    height: 30px;
+.form-control {
+  width: 300px;
+  height: 30px;
 }
 
 /* Rodrigo S, Rocio : Creamos otro form-control2 para product.html y categories.html */
 
-.form-control2{ 
- width: 150px;
- height: 30px;
- border-radius: 0.25rem;
- border: 1px solid #ced4da
+.form-control2 {
+  width: 150px;
+  height: 30px;
+  border-radius: 0.25rem;
+  border: 1px solid #ced4da
 }
 
-.col-12, .col-sm-6{
+.col-12,
+.col-sm-6 {
   text-align: center;
 }
-.form-check{
+
+.form-check {
   text-align: center;
   display: flex;
   align-items: center;
   margin-top: 20px;
   justify-content: center;
 }
+
 main.signin {
   display: flex;
   flex-direction: column;
@@ -282,115 +286,126 @@ main.signin {
   overflow-y: auto;
   margin-top: 100px;
 }
-.signin input[type=password]{
-  transform:translatex(-9px) translatey(0px);
-  border-top-left-radius:6px;
-  border-top-right-radius:6px;
-  border-bottom-left-radius:6px !important;
-  border-bottom-right-radius:6px !important;
- }
- #email{
-  border-top-left-radius:6px;
-  border-top-right-radius:6px;
-  border-bottom-left-radius:6px;
-  border-bottom-right-radius:6px;
- }
- .signin img{
-  border-top-left-radius:10px;
-  border-top-right-radius:10px;
-  border-bottom-left-radius:10px;
-  border-bottom-right-radius:10px;
-  max-width: 350px;
- }
- #Busqueda {
-margin:20px;
-max-width: 250px;
-display: flex;
-max-height: 40px;
-float: right;
-border-radius: 10px; 
+
+.signin input[type=password] {
+  transform: translatex(-9px) translatey(0px);
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  border-bottom-left-radius: 6px !important;
+  border-bottom-right-radius: 6px !important;
 }
 
-.estilo-lista{
+#email {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.signin img {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  max-width: 350px;
+}
+
+#Busqueda {
+  margin: 20px;
+  max-width: 250px;
+  display: flex;
+  max-height: 40px;
+  float: right;
+  border-radius: 10px;
+}
+
+.estilo-lista {
   list-style: none;
   margin-top: 20px;
   padding: 20px;
 }
-.imagenes-prod{
+
+.imagenes-prod {
   text-align: center;
   display: flex;
   margin-left: 500px;
-  width:150px;
+  width: 150px;
   height: 150px;
   margin-top: 20px;
   justify-content: center;
 
 }
 
-.imagenes-prod img{
+.imagenes-prod img {
   margin-left: 20px;
   border: solid grey 0.5mm;
 }
 
-#nombre{
+#nombre {
   padding-left: 20px;
   margin-top: 20px;
-  
+
 }
 
-#btnComprar{
-
+#btnAgregarCarrito {
+border-bottom: 25px;
   float: right;
+  background-color:salmon;
+  border-color: salmon;
 }
 
 .checked {
   color: orange;
 }
 
-.estilo-comentarios{
+.estilo-comentarios {
   display: block;
-  border-style:ridge;
+  border-style: ridge;
   border-bottom: 0%;
 }
 
 /* estilo para el nombre de usuario*/
 .nav-link#usuarioDropdown {
   display: flex;
-  align-items: center; /*centre vertical*/
+  align-items: center;
+  /*centre vertical*/
 }
 
 /* icono flecha desplegable*/
 .nav-link#usuarioDropdown .navbar-toggler-icon {
-  margin-left: 5px; /*espacio entre nombre usuario y flecha*/
-  }
+  margin-left: 5px;
+  /*espacio entre nombre usuario y flecha*/
+}
 
- 
+
 
 
 /* Estilos tema dark-light  ENTREGA 4 PARTE 3*/
-  body {
-    background-color: #f5f5f5;
-    color: #333;
+body {
+  background-color: #f5f5f5;
+  color: #333;
 }
+
 .content {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 /* Estilos para el tema oscuro */
 body.dark-theme {
-    background-color: #333;
-    color: #f5f5f5;
+  background-color: #333;
+  color: #f5f5f5;
 }
 
 
 
-body.dark-theme div{
+body.dark-theme div {
 
   color: white;
 
 }
+
 .dark-theme .content {
-    background-color: #333;
+  background-color: #333;
 }
 
 /* estilo menu desplegable */
@@ -399,152 +414,175 @@ body.dark-theme div{
 
 @media (min-width: 768px) {
 
-  .dropdown-menu{
+  .dropdown-menu {
     margin-left: 80%;
   }
-  
-  }
-  #btnEnviar{
-    border-radius: 15px;
-    outline-color: beige;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-  }
-h2{
+
+}
+
+#btnEnviar {
+  border-radius: 15px;
+  outline-color: beige;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+h2 {
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-text-decoration-color: aqua;
-}  
-  .producto {
-    border-radius: 10px;
-    border: 4px solid bisque;
-    padding: 10px;
-    margin: 15px;
-    text-align: center;
-    display: inline-block; /* Mostrar productos en línea */
-    width: 200px; /* Ancho fijo para cada producto */
-    vertical-align: top; /* Alinear los productos en la parte superior */    box-sizing: border-box; /* Incluir el borde en el ancho total */
-    list-style: none;
-   text-overflow: inherit;
+  text-decoration-color: aqua;
+  display: flex;
+  position: relative;
+}
+
+.producto {
+  border-radius: 10px;
+  border: 4px solid bisque;
+  padding: 10px;
+  margin: 15px;
+  text-align: center;
+  display: inline-block;
+  /* Mostrar productos en línea */
+  width: 200px;
+  /* Ancho fijo para cada producto */
+  vertical-align: top;
+  /* Alinear los productos en la parte superior */
+  box-sizing: border-box;
+  /* Incluir el borde en el ancho total */
+  list-style: none;
+  text-overflow: inherit;
 
 }
 
 .producto img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
-/*  Carrusel */ 
-.img-carrusel{
+/*  Carrusel */
+.img-carrusel {
   border-radius: 15px;
 }
 
-#carouselExampleCaptions{
-  height: 700px;
-  width: 700px;
-  margin-left: auto;
-  margin-right: auto;
+#carouselExampleCaptions {
+  max-width: 900px;
+  
+ border-radius: 25px;
+
 }
-.carousel-caption{
+
+.carousel-caption {
   text-shadow: -5px 3px 4px red;
-  text-transform:initial;
-font-family:Arial, Helvetica, sans-serif;
-border-radius: 30px;
+  text-transform: initial;
+  font-family: Arial, Helvetica, sans-serif;
+  border-radius: 30px;
 }
 
-#main-display{
-  margin: 75px;
+#main-display {
+  margin: 40px;
 
 }
-#botonmas{
+
+#botonmas {
   color: salmon;
   text-shadow: #333;
 }
 
-#carouselExample{
-    max-width: 300px;
-    margin-left: 300px;
-    
-  } .carousel-control-next-icon, .carousel-control-prev-icon {
-    display: inline-block;
-    width: 2rem;
-    height: 2rem;
-    background-repeat: no-repeat;
-    background-position: 50%;
-    background-size: 100% 100%;
-    background-color:bisque;
-  }
+#carouselExample {
+  max-width: 300px;
+  margin-left: 100px;
+
+
+}
+
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: 100% 100%;
+  background-color: bisque;
+  padding: auto;
+}
+
 /*comentarios*/
 
 
-h6{
-  color:salmon;
-  text-decoration:solid;
+h6 {
+  color: salmon;
+  text-decoration: solid;
 }
-#comentar{
+
+#comentar {
   text-align: left;
-  color:salmon;
+  color: salmon;
 }
-#areaDeTexto{
+
+#areaDeTexto {
   width: 270px;
   border-radius: 15px;
   border-color: salmon;
 }
-#estrellas-enviadas{
+
+#estrellas-enviadas {
   width: 150px;
-  border-radius:  15px;
-  color:salmon;
+  border-radius: 15px;
+  color: salmon;
   text-align: center;
   border-color: salmon;
 }
 
 
-#btnEnviar{
-  color:beige;
+#btnEnviar {
+  color: beige;
   background-color: salmon;
-  border-color:salmon;
+  border-color: salmon;
 }
 
 
 /*Rodri S : Centrar texto del navegador*/
-.navbar-nav{
+.navbar-nav {
   align-items: center;
 }
-/* Mano de click arriba de los div de productos relacionados */ 
-.producto{
-  cursor:pointer
+
+/* Mano de click arriba de los div de productos relacionados */
+.producto {
+  cursor: pointer
 }
 
 
 /*estilos pagina carrito */
 
-.tabla-carrito{
+.tabla-carrito {
   border-collapse: collapse;
   width: 100%;
 }
 
 
-.titulos th{
-border-bottom: 5px solid black;
-text-align: center;
+.titulos th {
+  border-bottom: 5px solid black;
+  text-align: center;
 }
 
-.tabla-carrito td{
- text-align: center;
+.tabla-carrito td {
+  text-align: center;
 
 }
 
-.imagen-carrito{
+.imagen-carrito {
   width: 125px;
   margin: 5px;
 }
 
 
-.h1Carrito{
+.h1Carrito {
   text-align: center;
   margin: 50px;
+  max-width: 210px;
 }
 
-.negrita{
+.negrita {
   font-weight: bold;
 }
 
@@ -554,10 +592,7 @@ text-align: center;
 
 
 
-@media (max-width: 768px) {
 
-  
-}
 .div-cards img {
   max-width: 210px;
   margin-right: 20px;
