--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ nav a {
 }
 
 .jumbotron .container {
-  max-width: 40rem;
+  max-width: 100px;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
   text-shadow: 1px 1px 2px grey;
@@ -578,7 +578,7 @@ h6 {
 
 .h1Carrito {
   text-align: center;
-  margin: 50px;
+  margin-left: 50px;
   max-width: 210px;
 }
 
