--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ nav a {
 }
 
 .jumbotron .container {
-  max-width: 100px;
+  max-width: 40rem;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
   text-shadow: 1px 1px 2px grey;
@@ -464,9 +464,10 @@ h2 {
 }
 
 #carouselExampleCaptions {
-  max-width: 900px;
-  
- border-radius: 25px;
+  height: 700px;
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
 
 }
 
