--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ nav a {
   margin-bottom: 0;
   background-color: #53C0FB;
   background: url('../img/cover_back.png');
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   color: black;
@@ -472,7 +472,6 @@ h2 {
 }
 
 .carousel-caption {
-  text-shadow: -5px 3px 4px red;
   text-transform: initial;
   font-family: Arial, Helvetica, sans-serif;
   border-radius: 30px;
@@ -484,7 +483,7 @@ h2 {
 }
 
 #botonmas {
-  color: salmon;
+  color: rgb(255, 255, 255);
   text-shadow: #333;
 }
 
@@ -503,7 +502,7 @@ h2 {
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: 100% 100%;
-  background-color: bisque;
+  background-color: rgb(70, 70, 70);
   padding: auto;
 }
 
@@ -597,4 +596,9 @@ h6 {
 .div-cards img {
   max-width: 210px;
   margin-right: 20px;
+}
+
+
+.colorindex {
+background: linear-gradient(#fbf9f7, rgb(105, 105, 105));
 }
